# agentman

./: .gitignore  .pypirc.template  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  PUBLISHING_CHECKLIST.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: claude.yml  docker-build.yml  publish-to-pypi.yml  test.yml
agentfile-frontend/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  build.sh  demo.sh  full-demo.sh  go.mod  main.go
agentfile-frontend/test-build/: Dockerfile  Dockerfile.bak  prompt.txt
docker/: Dockerfile.base
examples/agno-advanced/: Agentfile  Agentfile.yml
examples/agno-example/: Agentfile  Agentfile.yml  prompt.txt
examples/agno-ollama/: Agentfile  Agentfile.yml  prompt.txt
examples/agno-team-example/: Agentfile  Agentfile.yml  prompt.txt
examples/chain/: Agentfile
examples/chain-aliyun/: Agentfile  Agentfile.yml
examples/chain-ollama/: Agentfile  Agentfile.yml
examples/fast-agent-example/: Agentfile  Agentfile.yml  prompt.txt
examples/github-maintainer/: Agentfile  Agentfile.yml  README.md  prompt.txt
examples/github-profile-manager/: Agentfile  Agentfile.yml  prompt.txt
examples/structured-output-example/: Agentfile  Agentfile.yml  README.md
examples/structured-output-example/schemas/: extraction_schema.yaml  simple_schema.json
examples/yaml-example/: Agentfile.yml  prompt.txt
scripts/: build.sh  publish.sh
src/agentman/: __init__.py  __main__.py  agent_builder.py  agentfile_parser.py  agentfile_schema.py  cli.py  common.py  converter.py  version.py  yaml_parser.py
src/agentman/frameworks/: __init__.py  agno.py  agno_builder.py  base.py  fast_agent.py  fast_agent_builder.py
tests/: __init__.py  test_agent_builder.py  test_agentfile_parser.py  test_dockerfile_generation.py  test_framework_support.py  test_prompt_txt_support.py  test_refactored_framework_builders.py  test_yaml_parser.py
