[project]
name = "agentman"
version = "0.1.0"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Xiaodong Ye", email = "yeahdongcn@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "fast-agent-mcp>=0.2.28",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.scripts]
agentman = "agentman.cli:main"

[tool.black]
line-length = 120
skip-string-normalization = true
preview = true
target-version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.history
  | build
  | dist
  | docs
  | hack
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.uv]
package = true